added static file hosting

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,5 +8,8 @@
   <h1>Welcome to conference app</h1>
   <a href="greeting">Greeting</a>
   <a href="registration">Registration</a>
+  <div>
+  	<a href="file/spring 5.pdf">Spring 5</a>
+  </div>
 </body>
 </html>
