--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Welcome to conference app</h1>
-  <a href="greeting">Greeting</a>
+  <a href="thymegreet">Greeting</a>
   <a href="registration">Registration</a>
   <div>
   	<a href="file/spring 5.pdf">Spring 5</a>
